# hardware-decoding

./: README.md
ffmpeg-decoding/: cpu.py  decode.py  gpu_intel.py  gpu_nvidia.py
gstreamer/: decode.py
installation/: cuda_installation_guide.md  ffmpeg  ffmpeg_installation_guide.md  gstreamer-plugin  gstreamer_installation_guide.md  intel-media-sdk  intel_media_sdk_installation_guide.md  open_cv  opencv_installation_guide.md
intel/: CMakeLists.txt  main.cpp
nvcc/: CMakeLists.txt  main.cpp
opencv-decoding/: cpu.py  gpu.py  gpu_intel.py  gpu_nvidia.py
